<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_module_state"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_marginTop="24dp"
        android:background="?attr/colorPrimary"
        android:paddingHorizontal="24dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="1dp"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/ivModuleStateIcon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/ic_icon_check"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvModuleStateMain"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@drawable/ic_icon_warning" />

        <TextView
            android:id="@+id/tvModuleStateMain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/module_have_active"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvModuleStateSub"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/ivModuleStateIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvModuleStateSub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/ivModuleStateIcon"
            app:layout_constraintTop_toBottomOf="@id/tvModuleStateMain"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="v1.0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutAbout"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_marginTop="24dp"
        android:background="?attr/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/ic_icon_about2"
            android:backgroundTint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/about_this_module"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutDonate"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/ic_icon_dollar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/donate"
            android:textSize="16sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>